updated the website font

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Segoe UI", sans-serif;
+  font-family: "Poppins", sans-serif;
   background: linear-gradient(to bottom right, #f8fff9, #e9f9f1);
   margin: 0;
   padding: 0;
